[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/BG/BackgroundScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ButtonBackPressed.png" type="Texture" id=2]
[ext_resource path="res://sprites/ButtonBack.png" type="Texture" id=3]
[ext_resource path="res://scenes/Play.gd" type="Script" id=4]
[ext_resource path="res://objects/SongSelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/CheatMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ChartEditor.tres" type="Theme" id=7]
[ext_resource path="res://sprites/descend_sort.png" type="Texture" id=8]

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundScene" parent="." instance=ExtResource( 1 )]
z_index = 4096

[node name="Back" type="TextureButton" parent="."]
margin_left = 445.0
margin_top = 293.0
margin_right = 637.0
margin_bottom = 357.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 440.0
margin_bottom = 360.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongSelect" parent="CenterContainer" instance=ExtResource( 5 )]
margin_left = 220.0
margin_top = 180.0
margin_right = 220.0
margin_bottom = 180.0

[node name="ChartEditor" type="Button" parent="."]
margin_left = 640.0
margin_top = 202.0
margin_right = 747.0
margin_bottom = 222.0
rect_rotation = -90.0
theme = ExtResource( 7 )
text = "Chart Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheatMenu" parent="." instance=ExtResource( 6 )]
margin_left = 660.0
margin_top = 30.0
margin_right = 660.32
margin_bottom = 30.12

[node name="Hint" type="Label" parent="."]
margin_left = 645.0
margin_top = 204.0
margin_right = 794.0
margin_bottom = 217.0
theme = ExtResource( 7 )
text = "Try the konami code!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Sort" type="Button" parent="."]
anchor_left = 0.688
anchor_top = 0.028
anchor_right = 0.708
anchor_bottom = 0.059
margin_left = -0.319977
margin_top = -0.0799999
margin_right = 30.88
margin_bottom = 26.76
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 7 )
toggle_mode = true
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sort"]
margin_left = 54.6667
margin_top = 1.66675
margin_right = 94.6667
margin_bottom = 14.6667
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 7 )
text = "Sort Difficulty"

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ChartEditor" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Sort" to="." method="_on_Sort_toggled"]
